<resources>
    <string name="app_name" translatable="false">Impuls</string>
    <string name="group_name">Zespół Impuls I</string>
    <string name="school_name">Szkoła Tańca Kieleckiego Teatru Tańca</string>
    <string name="location">Pl. Moniuszki 2b, Kielce Poland</string>
    <string name="group_description">Zespół specjalizuje się w tańcu jazzowym i jego odmianach oraz w tańcu klasycznym.</string>
    <string name="schedule">Środy, piątki 18:00-20:00</string>
    <string name="invitation">Dołącz do nas!</string>
</resources>